<resources>
    <string name="app_name">CafeApp</string>
    <string name="tw_greetings">Good morning!</string>
    <string name="et_name_hint">Input your name</string>
    <string name="et_password_hint">Input your passwors</string>
    <string name="button_sign_in">Sign in</string>
    <string name="tw_make_order">Good morning, %s! \n What would you like to order?</string>
    <string name="rb_tea">Tea</string>
    <string name="rb_coffee">Coffee</string>
    <string name="tw_additives">What would you like to add in your %s?</string>
    <string name="chb_sugar">Sugar</string>
    <string name="chb_milk">Milk</string>
    <string name="chb_lemon">Lemon</string>
    <string name="tw_drink_type">Choose drink type:</string>
    <string name="btn_make_an_order">Make an order</string>
    <string name="tw_name">Name:</string>
    <string name="tw_drink">Drink:</string>
    <string name="drink_type">Drink type:</string>
    <string name="additives">Additives:</string>
    <string name="error_fields_empty"> Please fill all fields!</string>
    <string name="s_your_order_is_received">%s, your order is received. \n Thank you!</string>
    <string name="receipt">RECEIPT</string>
    <string name="stars">**************************************************</string>
    <string name="address">123 Main St, Springfield, IL 62704</string>
    <string name="enjoy_your_meal">ENJOY YOUR MEAL!</string>

    <array name="types_of_tea">
        <item>Green</item>
        <item>Black</item>
        <item>Mint</item>
        <item>Milk Ulun</item>
    </array>

    <array name="types_of_coffee">
        <item>Americano</item>
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Latte</item>
        <item>Raf</item>
    </array>
</resources>